# cssm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.template  main.py  pyproject.toml  railway.json  requirements.txt  setup.py  supabase_setup.sql
.github/workflows/: ci.yml
config/: config.yaml  configloader.py
data/: data.py
data-ingestion/: data_ingestion.py  dataingestion.py
data_ingestion/: data_ingestion.py
evals/: benchmark.jsonl  eval_metrics.py  test_eval.py
graph/: rag_graph.py
notebooks/: data.ipynb
prompts/: prompt.py
rag-chat/: .dockerignore  Dockerfile  package-lock.json  package.json
rag-chat/src/app/: globals.css  layout.tsx  page.tsx
rag-chat/src/components/: ChatInterface.tsx
rag-chat/src/utils/: sounds.ts
retriever/: retrieval.py
static/: style.css
templates/: chat.html
test/: data-estimate.py  test_embeddings.py  visualize_graph.py
tests/: conftest.py  test_auth.py  test_health.py  test_retrieve.py  test_stream.py
utils/: model_loader.py  modelloader.py
